# AI

./: README.md  pyproject.toml
ML/: README.md
ML/Methods/Supervised_learning/Decision_trees/: README.md  classification_trees_statquest.ipynb
ML/supervised_learning/: README.md
ML/supervised_learning/decision_trees/: README.md
