[tool.poetry]
name = "AI"
version = "0.1.0"
description = "Virtual env for learning AI and ML"
authors = ["mesonyktio <mkoz001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
